style: prettify existing codebase
