# api/routes/reports.js
@@ -1,39 +1,39 @@
-const express = require('express');
-const Router = express.Router;
+const express = require('express')
+const Router = express.Router
 // Acting on /api/v1/urls
-const router = Router();
+const router = Router()
 
-const logger = require('pino')();
+const logger = require('pino')()
 
-const Service = require('../service/reports');
+const Service = require('../service/reports')
 
-router.get('/:id', async(req, resp)=>{
+router.get('/:id', async (req, resp) => {
   let params = {
     id: req.params.id,
-  };
-  try{
-    let ans = await Service.getReportURL(params);
-    resp.status(ans.status).send(ans.data);
-  } catch(e){
-    logger.error(e);
-    resp.sendStatus(500);
   }
-});
+  try {
+    let ans = await Service.getReportURL(params)
+    resp.status(ans.status).send(ans.data)
+  } catch (e) {
+    logger.error(e)
+    resp.sendStatus(500)
+  }
+})
 
-router.get('/', async(req, resp) => {
+router.get('/', async (req, resp) => {
   let params = {
     page: req.query.page || 1,
     size: req.query.size || 20,
-    where: req.query.where || ''
-  };
-  try{
-    let ans = await Service.listReport(params);
-    resp.status(ans.status).send(ans.data);
-  } catch(e){
-    logger.error(e);
-    resp.sendStatus(500);
+    where: req.query.where || '',
   }
-});
+  try {
+    let ans = await Service.listReport(params)
+    resp.status(ans.status).send(ans.data)
+  } catch (e) {
+    logger.error(e)
+    resp.sendStatus(500)
+  }
+})
 
 // router.post('/', async(req, resp)=>{
 //   let params = {
@@ -48,4 +48,4 @@ router.get('/', async(req, resp) => {
 //   }
 // });
 
-module.exports = router;
+module.exports = router
